# melior

./: bookmarks.html  compilation.txt
examples/toy/: Cargo.toml  build.rs
examples/toy/ffi/: CMakeLists.txt
examples/toy/ffi/dialects/: CMakeLists.txt  dialects.h  toy-dialect.h  toy.cpp  toy.h  toy.td
examples/toy/ffi/mlir-c-ext/: CMakeLists.txt  IR.cpp  IR.h  mlir-c-ext.h
examples/toy/src/: dialect.rs  main.rs
examples/toy/src/dialect/: toy.rs
