[package]
name = "toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
melior = { version = "0.18.5", path = "../../melior", features = [
    "ods-dialects",
] }
mlir-sys = "0.2.2"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
convert_case = "0.6.0"
walkdir = "2.5.0"
